updated index.html, deleted about.md

--- a/index.html
+++ b/index.html
@@ -3,6 +3,5 @@ layout: home
 author_profile: true
 title: "About me"
 ---
-Tempor velit sint sunt ipsum tempor enim ad qui ullamco. Est dolore anim ad velit duis dolore minim sunt aliquip amet commodo labore. Ut eu pariatur aute ea aute excepteur laborum. Esse ea esse excepteur minim mollit qui cillum excepteur ex dolore magna. Labore deserunt fugiat incididunt incididunt sint ea. Consequat dolore aute laboris quis proident quis non et est consectetur ex eiusmod sit culpa.
-
-Cupidatat ea do et in excepteur in. Ad nostrud ut est esse eu duis ea sunt eiusmod. Aliquip tempor veniam sint elit fugiat. Velit incididunt laboris amet incididunt labore dolore irure velit excepteur commodo deserunt laborum. Consectetur eu fugiat veniam veniam Lorem labore magna eiusmod. Ea occaecat reprehenderit pariatur consectetur minim labore ut aliquip.
+I am a PhD student at University of Florida under the supervision on Dr. Bonnie Dorr. My primary research focus is on exploring the usability of Abstract Meaning Representations (AMR). AMR is a representational formalism defined to represent the meaning of a text by presenting "Who did What to Whom". This formalism has been used in multiple complex Natural Language Processing tasks such as Summarization, Information Retrieval and Text generation. My effort is to study the possibility of using AMRs in sentiment analysis task in order to 
+build a more explainable pipeline for the said task.
