--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: home
 author_profile: true
 title: "About me"
 ---
+<style>
 body {
     font-size: 100%;
 }
@@ -18,7 +19,7 @@ font-size: 1.875em;
 p {
 font-size: 0.875em;
 }
-
+</style>
 
 <p>I am a PhD student at University of Florida under the supervision on Dr. Bonnie Dorr. My primary research focus is on exploring the usability of Abstract Meaning Representations (AMR). AMR is a representational formalism defined to represent the meaning of a text by presenting "Who did What to Whom". This formalism has been used in multiple complex Natural Language Processing tasks such as Summarization, Information Retrieval and Text generation. My effort is to study the possibility of using AMRs in sentiment analysis task in order to 
 build a more explainable pipeline for the said task.</p>
