Added custom labels to index.html

--- a/index.html
+++ b/index.html
@@ -23,3 +23,21 @@ font-size: 0.875em;
 
 I am a PhD student at University of Florida under the supervision on Dr. Bonnie Dorr. My primary research focus is on exploring the usability of Abstract Meaning Representations (AMR). AMR is a representational formalism defined to represent the meaning of a text by presenting "Who did What to Whom". This formalism has been used in multiple complex Natural Language Processing tasks such as Summarization, Information Retrieval and Text generation. My effort is to study the possibility of using AMRs in sentiment analysis task in order to 
 build a more explainable pipeline for the said task.
+
+<span class="label NLP">Natural Language Processing</span>
+<span class="label XAI">Explainable AI</span>
+<span class="label ML">Machine Learning</span>
+<span class="label DS">Data Science</span>
+<!-- <span class="label other">Other</span>  -->
+
+<style>
+    label {
+  color: white;
+  padding: 8px;
+}
+
+.NLP {background-color: #04AA6D;} /* Green */
+.XAI {background-color: #2196F3;} /* Blue */
+.ML {background-color: #ff9800;} /* Orange */
+.DS {background-color: #f44336;} /* Red */
+</style>
