edited customr label configs in index.html

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@ build a more explainable pipeline for the said task.
 </p>
 
 <style>
-    label {
+    /* label {
   color: white;
   padding: 8px;
-}
+} */
 
 .custom-label {
     height: 28px;
-    color: var(--label-text-color);
+    color: #f0f0f0 var(--label-text-color);
     border-radius: 5px;
     padding: 5px 15px;
     background: #b60e4e var(--label-color);
