edited index.html custom label config

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ build a more explainable pipeline for the said task.
     color: #f0f0f0 var(--label-text-color);
     border-radius: 5px;
     padding: 5px 15px;
-    background: #b60e4e var(--label-color);
+    background-color: #b60e4e var(--label-color);
     transition: all 0.3s ease;
     position: relative;
     display: inline-block;
