edited custom label config

--- a/index.html
+++ b/index.html
@@ -49,12 +49,29 @@ build a more explainable pipeline for the said task.
     outline: none;
     font-size: smaller;
 }
-animated_label {
+.animated_label {
     border: none;
     color: var(--label-text-color);
     margin-bottom: 5px;
+    font-size: smaller;
 }
 
+
+.animated_label::after {
+
+    position: absolute;
+    content: "";
+    width: 0;
+    height: 100%;
+    top: 0;
+    left: 0;
+    direction: rtl;
+    z-index: -1;
+    border-radius: 5px;
+    box-shadow: -7px -7px 20px 0px #fff9, -4px -4px 5px 0px #fff9, 7px 7px 20px 0px #0002, 4px 4px 5px 0px #0001;
+    transition: all 0.3s ease;
+
+}
 /* .NLP {background-color: #04AA6D;} /* Green */
 /* .XAI {background-color: #2196F3;} Blue */
 /* .ML {background-color: #ff9800;} Orange */
