index.html edit

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@ font-size: 0.875em;
 I am a PhD student at University of Florida under the supervision on Dr. Bonnie Dorr. My primary research focus is on exploring the usability of Abstract Meaning Representations (AMR). AMR is a representational formalism defined to represent the meaning of a text by presenting "Who did What to Whom". This formalism has been used in multiple complex Natural Language Processing tasks such as Summarization, Information Retrieval and Text generation. My effort is to study the possibility of using AMRs in sentiment analysis task in order to 
 build a more explainable pipeline for the said task.
 <p>
-<span class="label custom-label animated label"><nobr>Natural Language Processing</nobr> ::after</span>
-<span class="label custom-label animated label">Explainable AI</span>
-<span class="label custom-label animated label">Machine Learning</span>
-<span class="label custom-label animated label">Data Science</span>
+<span class="label custom-label animated_label"><nobr>Natural Language Processing</nobr> 
+    ::after
+</span>
+<span class="label custom-label animated_label">Explainable AI</span>
+<span class="label custom-label animated_label">Machine Learning</span>
+<span class="label custom-label animated_label">Data Science</span>
 </p>
 
 <style>
