--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@ font-size: 0.875em;
 I am a PhD student at University of Florida under the supervision on Dr. Bonnie Dorr. My primary research focus is on exploring the usability of Abstract Meaning Representations (AMR). AMR is a representational formalism defined to represent the meaning of a text by presenting "Who did What to Whom". This formalism has been used in multiple complex Natural Language Processing tasks such as Summarization, Information Retrieval and Text generation. My effort is to study the possibility of using AMRs in sentiment analysis task in order to 
 build a more explainable pipeline for the said task.
 <p>
-<span class="label custom-label animated_label"><nobr>Natural Language Processing</nobr> 
-    ::after
-</span>
+<span class="label custom-label animated_label">Natural Language Processing</span>
 <span class="label custom-label animated_label">Explainable AI</span>
 <span class="label custom-label animated_label">Machine Learning</span>
 <span class="label custom-label animated_label">Data Science</span>
@@ -43,7 +41,7 @@ build a more explainable pipeline for the said task.
     color: #f0f0f0 var(--label-text-color);
     border-radius: 5px;
     padding: 5px 15px;
-    background-color: #b60e4e var(--label-color);
+    background: #b60e4e var(--label-color);
     transition: all 0.3s ease;
     position: relative;
     display: inline-block;
@@ -59,7 +57,7 @@ build a more explainable pipeline for the said task.
 }
 
 
-.animated_label::after {
+/* .animated_label::after {
 
     position: absolute;
     content: "";
@@ -73,7 +71,7 @@ build a more explainable pipeline for the said task.
     box-shadow: -7px -7px 20px 0px #fff9, -4px -4px 5px 0px #fff9, 7px 7px 20px 0px #0002, 4px 4px 5px 0px #0001;
     transition: all 0.3s ease;
 
-}
+} */
 /* .NLP {background-color: #04AA6D;} /* Green */
 /* .XAI {background-color: #2196F3;} Blue */
 /* .ML {background-color: #ff9800;} Orange */
