--- a/index.html
+++ b/index.html
@@ -31,17 +31,18 @@ build a more explainable pipeline for the said task.
 </p>
 
 <style>
-    label {
+    .label {
   color: #f0f0f0 var(--label-text-color);
+  background: #b60e4e var(--label-color);
   padding: 8px;
 }
 
 .custom-label {
     height: 28px;
     color: var(--label-text-color);
+    background: var(--label-color);
     border-radius: 5px;
     padding: 5px 15px;
-    background: #b60e4e var(--label-color);
     transition: all 0.3s ease;
     position: relative;
     display: inline-block;
