--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@ build a more explainable pipeline for the said task.
 
 .animated_label {
     border: none;
-    color: #f0f0f0 var(--label-text-color);
+    color: #f0f0f0;
     margin-bottom: 5px;
     font-size: smaller;
 }
 .custom-label {
     height: 28px;
-    color: var(--label-text-color);
-    background: #b60e4e var(--label-color);
+    color: #f0f0f0;
+    background: #b60e4e ;
     border-radius: 5px;
     padding: 5px 15px;
     transition: all 0.3s ease;
@@ -59,7 +59,7 @@ build a more explainable pipeline for the said task.
 
 
 
-/* .animated_label::after {
+.animated_label::after {
 
     position: absolute;
     content: "";
@@ -73,7 +73,7 @@ build a more explainable pipeline for the said task.
     box-shadow: -7px -7px 20px 0px #fff9, -4px -4px 5px 0px #fff9, 7px 7px 20px 0px #0002, 4px 4px 5px 0px #0001;
     transition: all 0.3s ease;
 
-} */
+}
 /* .NLP {background-color: #04AA6D;} /* Green */
 /* .XAI {background-color: #2196F3;} Blue */
 /* .ML {background-color: #ff9800;} Orange */
