adding a news update section to index.html

--- a/index.html
+++ b/index.html
@@ -39,6 +39,46 @@ build a more explainable pipeline for the said task."
 <span class="label custom-label animated_label">Data Science</span>
 </p>
 
+<div class="news-section">
+    <h2>News</h2>
+
+    <div class="news-item">
+      <span class="emoji">🌻</span>
+      I accepted a tenure-track job offer in Computer Science at the University of Colorado Boulder!
+    </div>
+
+    <div class="news-item">
+      <span class="emoji">🚴</span>
+      I’m currently spending a year at the <a href="https://pioneercentre.dk/" target="_blank">Pioneer Centre for AI</a> at the University of Copenhagen.
+    </div>
+
+    <div class="news-item">
+      <span class="emoji">🦅</span>
+      I’m recruiting students to join CU Boulder in Fall 2025; <a href="https://example.com/faq" target="_blank">check the FAQ to learn more!</a>
+    </div>
+
+    <div class="news-item">
+      📄 New work about poetry evaluation and LLM memorization accepted at <a href="https://emnlp.org/" target="_blank">EMNLP Findings</a>.
+    </div>
+
+    <div class="news-item">
+      📄 New work about story perceptions accepted at <a href="https://emnlp.org/" target="_blank">EMNLP</a>.
+    </div>
+
+    <div class="news-item">
+      📄 New work about sensitive disclosures in user-chatbot conversations accepted at <a href="https://example.com/colm" target="_blank">COLM</a>.
+    </div>
+
+    <div class="news-item">
+      📄 New work about story detection across communities accepted at <a href="https://acl.org/" target="_blank">ACL</a>.
+    </div>
+
+    <div class="news-item">
+      📄 New work about LLMs and maternal healthcare accepted at <a href="https://example.com/facct" target="_blank">FAccT</a>.
+    </div>
+  </div>
+
+
 <style>
     /* .label {
   color: #f0f0f0 var(--label-text-color);
@@ -87,4 +127,31 @@ build a more explainable pipeline for the said task."
 /* .XAI {background-color: #2196F3;} Blue */
 /* .ML {background-color: #ff9800;} Orange */
 /* .DS {background-color: #f44336;} Red */ 
+
+.news-section {
+      max-width: 800px;
+      margin: auto;
+    }
+    .news-section h2 {
+      text-align: center;
+      color: #333;
+    }
+    .news-item {
+      margin-bottom: 15px;
+      padding: 10px;
+      border-left: 4px solid #ffc107; /* Highlight bar */
+      background-color: #f9f9f9;
+    }
+    .news-item .emoji {
+      font-size: 1.5em;
+      margin-right: 10px;
+    }
+    .news-item a {
+      color: #007bff;
+      text-decoration: none;
+    }
+    .news-item a:hover {
+      text-decoration: underline;
+    }
 </style>
+
