--- a/index.html
+++ b/index.html
@@ -43,39 +43,10 @@ build a more explainable pipeline for the said task."
     <h2>News</h2>
 
     <div class="news-item">
-      <span class="emoji">🌻</span>
-      I accepted a tenure-track job offer in Computer Science at the University of Colorado Boulder!
+      <span class="emoji">📝</span>
+      New paper on using Abstract Meaning Representations (AMR) for explainable fact verification, "AMREx: AMR for Explainable Fact Verification" accepted by <a href="https://pioneercentre.dk/" target="_blank">FEVER workshop</a> at EMNLP 2024.
     </div>
 
-    <div class="news-item">
-      <span class="emoji">🚴</span>
-      I’m currently spending a year at the <a href="https://pioneercentre.dk/" target="_blank">Pioneer Centre for AI</a> at the University of Copenhagen.
-    </div>
-
-    <div class="news-item">
-      <span class="emoji">🦅</span>
-      I’m recruiting students to join CU Boulder in Fall 2025; <a href="https://example.com/faq" target="_blank">check the FAQ to learn more!</a>
-    </div>
-
-    <div class="news-item">
-      📄 New work about poetry evaluation and LLM memorization accepted at <a href="https://emnlp.org/" target="_blank">EMNLP Findings</a>.
-    </div>
-
-    <div class="news-item">
-      📄 New work about story perceptions accepted at <a href="https://emnlp.org/" target="_blank">EMNLP</a>.
-    </div>
-
-    <div class="news-item">
-      📄 New work about sensitive disclosures in user-chatbot conversations accepted at <a href="https://example.com/colm" target="_blank">COLM</a>.
-    </div>
-
-    <div class="news-item">
-      📄 New work about story detection across communities accepted at <a href="https://acl.org/" target="_blank">ACL</a>.
-    </div>
-
-    <div class="news-item">
-      📄 New work about LLMs and maternal healthcare accepted at <a href="https://example.com/facct" target="_blank">FAccT</a>.
-    </div>
   </div>
 
 
