Updated the paper link and item color

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ build a more explainable pipeline for the said task."
 
     <div class="news-item">
       <span class="emoji">📝</span>
-      New paper on using Abstract Meaning Representations (AMR) for explainable fact verification, "AMREx: AMR for Explainable Fact Verification" accepted by <a href="https://pioneercentre.dk/" target="_blank">FEVER workshop</a> at EMNLP 2024.
+      New paper on using Abstract Meaning Representations (AMR) for explainable fact verification, <a href="https://aclanthology.org/2024.fever-1.pdf#page=248" target="_blank">"AMREx: AMR for Explainable Fact Verification"</a> accepted by FEVER workshop at EMNLP 2024.
     </div>
 
   </div>
@@ -110,7 +110,7 @@ build a more explainable pipeline for the said task."
     .news-item {
       margin-bottom: 15px;
       padding: 10px;
-      border-left: 4px solid #ffc107; /* Highlight bar */
+      border-left: 4px solid #817E9F; /* Highlight bar */
       background-color: #f9f9f9;
     }
     .news-item .emoji {
