--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ build a more explainable pipeline for the said task."
 </p>
 
 <div class="news-section">
-    <h2>News</h2>
+    <h1>News</h1>
 
     <div class="news-item">
       <span class="emoji">📝</span>
@@ -66,7 +66,8 @@ build a more explainable pipeline for the said task."
 .custom-label {
     height: 28px;
     color: #f0f0f0;
-    background: #b60e4e ;
+    /* background:  ; #b60e4e */
+    background: #817E9F;
     border-radius: 5px;
     padding: 5px 15px;
     transition: all 0.3s ease;
@@ -103,8 +104,8 @@ build a more explainable pipeline for the said task."
       max-width: 800px;
       margin: auto;
     }
-    .news-section h2 {
-      text-align: center;
+    .news-section h1 {
+      text-align: left;
       color: #333;
     }
     .news-item {
