--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ build a more explainable pipeline for the said task."
     height: 28px;
     color: #f0f0f0;
     /* background:  ; #b60e4e */
-    background: #817E9F;
+    background: #8377D1;
     border-radius: 5px;
     padding: 5px 15px;
     transition: all 0.3s ease;
@@ -111,7 +111,7 @@ build a more explainable pipeline for the said task."
     .news-item {
       margin-bottom: 15px;
       padding: 10px;
-      border-left: 4px solid #817E9F; /* Highlight bar */
+      border-left: 4px solid #8377D1; /* Highlight bar */
       background-color: #f9f9f9;
     }
     .news-item .emoji {
