Added more papers

--- a/index.html
+++ b/index.html
@@ -44,8 +44,18 @@ build a more explainable pipeline for the said task."
 
     <div class="news-item">
       <span class="emoji">📝</span>
-      New paper on using Abstract Meaning Representations (AMR) for explainable fact verification, <a href="https://aclanthology.org/2024.fever-1.pdf#page=248" target="_blank">"AMREx: AMR for Explainable Fact Verification"</a> accepted by FEVER workshop at EMNLP 2024.
+      New paper on using Abstract Meaning Representations (AMR) for explainable fact verification, <a href="https://aclanthology.org/2024.fever-1.26.pdf" target="_blank">"AMREx: AMR for Explainable Fact Verification"</a> accepted by FEVER workshop at EMNLP 2024.
     </div>
+
+    <div class="news-item">
+        <span class="emoji">📝</span>
+        New paper on using comparative analysis of rule-based and DNN models for political bias detection, <a href="https://aclanthology.org/2024.sicon-1.7.pdf" target="_blank">"DAHRS: Divergence-Aware Hallucination-Remediated SRL Projection"</a> accepted by NLDB 2024.
+      </div>
+
+    <div class="news-item">
+        <span class="emoji">📝</span>
+        New paper on multi-lingual semantic role labeling projection<a href="https://link.springer.com/chapter/10.1007/978-3-031-70239-6_29" target="_blank">"Balancing Transparency and Accuracy: A Comparative Analysis of Rule-Based and Deep Learning Models in Political Bias Classification"</a> accepted by SICon workshop at EMNLP 2024.
+      </div>  
 
   </div>
 
