Updated index.html with current info

--- a/index.html
+++ b/index.html
@@ -29,14 +29,13 @@ feature_row:
 build a more explainable pipeline for the said task."
 
 {% include feature_row type="center" %} -->
-"I am a PhD student at University of Florida under the supervision on Dr. Bonnie Dorr. My primary research focus is on exploring the usability of Abstract Meaning Representations (AMR). AMR is a representational formalism defined to represent the meaning of a text by presenting "Who did What to Whom". This formalism has been used in multiple complex Natural Language Processing tasks such as Summarization, Information Retrieval and Text generation. My effort is to study the possibility of using AMRs in sentiment analysis task in order to 
-build a more explainable pipeline for the said task."
+"I am a PhD student at the University of Florida, working under the guidance of Dr. Bonnie Dorr. My research is primarily centered on Natural Language Inference (NLI), a field that explores the semantic relationships between a given premise and hypothesis. Specifically, I focus on identifying ambiguous premise-hypothesis pairs that allow for multiple valid interpretations and integrating these complexities into general NLI systems. Additionally, my work involves recognizing instances that require additional commonsense knowledge for precise inference and developing methods to generate and incorporate this knowledge, thereby enhancing the performance of NLI pipelines."
 
 <p>
-<span class="label custom-label animated_label">Natural Language Processing</span>
-<span class="label custom-label animated_label">Explainable AI</span>
-<span class="label custom-label animated_label">Machine Learning</span>
-<span class="label custom-label animated_label">Data Science</span>
+<span class="label custom-label animated_label">Natural Language Inference</span>
+<span class="label custom-label animated_label">Ambiguity in NLI</span>
+<span class="label custom-label animated_label">Commonsense-Augmented Inference</span>
+<span class="label custom-label animated_label">Abstract Meaning Representations</span>
 </p>
 
 <div class="news-section">
