Added DAHRS paper

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ build a more explainable pipeline for the said task."
   <!-- Publications Newsfeed Section -->
 <section class="newsfeed-container">
     <div class="newsfeed-header">
-        <h2>Recent Publications</h2>
+        <h2><b>Recent Publications</b></h2>
     </div>
     
     <div class="newsfeed-content" id="newsfeed">
@@ -87,10 +87,10 @@ build a more explainable pipeline for the said task."
         </div>
 
         <div class="news-item">
-            <div class="news-date">November 07, 2024</div>
+            <div class="news-date">November 02, 2024</div>
             <span class="news-badge badge-preprint">Accepted</span>
             <div class="news-title">
-                <a href="https://aclanthology.org/2024.sicon-1.7/" target="_blank">Your Paper Title Here</a>
+                <a href="https://aclanthology.org/2024.sicon-1.7/" target="_blank">Balancing Transparency and Accuracy: A Comparative Analysis of Rule-Based and Deep Learning Models in Political Bias Classification</a>
             </div>
             <div class="news-venue">Accepted to SciCon EMNLP 2024</div>
             <div class="news-description">
@@ -98,6 +98,22 @@ build a more explainable pipeline for the said task."
             </div>
             <div class="news-links">
                 <a href="https://aclanthology.org/2024.sicon-1.7/" class="news-link" target="_blank">📄 arXiv</a>
+                <!-- <a href="https://github.com/your-username/your-repo" class="news-link" target="_blank">💻 Code</a> -->
+            </div>
+        </div>
+
+        <div class="news-item">
+            <div class="news-date">July 12, 2024</div>
+            <span class="news-badge badge-preprint">Accepted</span>
+            <div class="news-title">
+                <a href="https://link.springer.com/chapter/10.1007/978-3-031-70239-6_29" target="_blank">DAHRS: Divergence-Aware Hallucination-Remediated SRL Projection</a>
+            </div>
+            <div class="news-venue">Accepted to NLDB 2024</div>
+            <div class="news-description">
+                We implement Divergence-Aware Hallucination-Remediated SRL projection (DAHRS), leveraging linguistically-informed alignment remediation followed by greedy First-Come First-Assign (FCFA) SRL projection. DAHRS improves the accuracy of SRL projection without additional transformer-based machinery, beating XSRL in both human and automatic comparisons, and advancing beyond headwords to accommodate phrase-level SRL projection (e.g., EN-FR, EN-ES).
+            </div>
+            <div class="news-links">
+                <a href="https://link.springer.com/chapter/10.1007/978-3-031-70239-6_29" class="news-link" target="_blank">📄 Paper</a>
                 <!-- <a href="https://github.com/your-username/your-repo" class="news-link" target="_blank">💻 Code</a> -->
             </div>
         </div>
