Minor changes to publication newsfeed

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ build a more explainable pipeline for the said task."
   <!-- Publications Newsfeed Section -->
 <section class="newsfeed-container">
     <div class="newsfeed-header">
-        <h2><b>Recent Publications</b></h2>
+        <h1><b>Recent Publications</b></h1>
     </div>
     
     <div class="newsfeed-content" id="newsfeed">
@@ -88,7 +88,7 @@ build a more explainable pipeline for the said task."
 
         <div class="news-item">
             <div class="news-date">November 02, 2024</div>
-            <span class="news-badge badge-preprint">Accepted</span>
+            <span class="news-badge badge-accepted">Accepted</span>
             <div class="news-title">
                 <a href="https://aclanthology.org/2024.sicon-1.7/" target="_blank">Balancing Transparency and Accuracy: A Comparative Analysis of Rule-Based and Deep Learning Models in Political Bias Classification</a>
             </div>
@@ -104,7 +104,7 @@ build a more explainable pipeline for the said task."
 
         <div class="news-item">
             <div class="news-date">July 12, 2024</div>
-            <span class="news-badge badge-preprint">Accepted</span>
+            <span class="news-badge badge-accepted">Accepted</span>
             <div class="news-title">
                 <a href="https://link.springer.com/chapter/10.1007/978-3-031-70239-6_29" target="_blank">DAHRS: Divergence-Aware Hallucination-Remediated SRL Projection</a>
             </div>
