--- a/index.html
+++ b/index.html
@@ -66,6 +66,25 @@ build a more explainable pipeline for the said task."
     <div class="newsfeed-header">
         <h1><b>Recent Publications</b></h1>
     </div>
+
+    <!-- <div class="newsfeed-content" id="newsfeed">
+        <!-- Replace with your actual publications -->
+        <div class="news-item">
+            <div class="news-date">November 02, 2024</div>
+            <span class="news-badge badge-preprint">Preprint</span>
+            <div class="news-title">
+                <a href="https://arxiv.org/abs/2507.15100" target="_blank">Filling the Gap: Is Commonsense Knowledge Generation useful for Natural Language Inference?</a>
+            </div>
+            <div class="news-venue">Accepted to FEVER EMNLP 2024</div>
+            <div class="news-description">
+                This study explores the potential of Large Language Models as commonsense knowledge generators for NLI along two key dimensions: their reliability in generating such knowledge and the impact of that knowledge on prediction accuracy. We adapt and modify existing metrics to assess LLM factuality and consistency in generating in this context.
+            </div>
+            <div class="news-links">
+                <a href="https://arxiv.org/abs/2507.15100" class="news-link" target="_blank">📄 arXiv</a>
+                <!-- <a href="https://github.com/your-username/your-repo" class="news-link" target="_blank">💻 Code</a> -->
+                <!-- <a href="#" class="news-link" target="_blank">📊 Data</a> -->
+            </div>
+        </div> -->
     
     <div class="newsfeed-content" id="newsfeed">
         <!-- Replace with your actual publications -->
@@ -77,7 +96,7 @@ build a more explainable pipeline for the said task."
             </div>
             <div class="news-venue">Accepted to FEVER EMNLP 2024</div>
             <div class="news-description">
-                We implement AMREx, an Abstract Meaning Representation (AMR)-based veracity prediction and explanation system for fact verification using a combination of Smatch, an AMR evaluation metric to measure meaning containment and textual similarity.
+                We implement AMREx, an Abstract Meaning Representation (AMR)-based veracity prediction and explanation system for fact verification using a combination of Smatch, an AMR evaluation metric to measure meaning containment and textual similarity. AMREx surpasses the AVeriTec baseline accuracy showing the effectiveness of our approach for real-world claim verification.
             </div>
             <div class="news-links">
                 <a href="https://aclanthology.org/2024.fever-1.26/" class="news-link" target="_blank">📄 Paper</a>
@@ -97,7 +116,7 @@ build a more explainable pipeline for the said task."
                 We perform a comparative analysis of rule-based and DNN models for political bias detection by contrasting the opaque architecture of a deep learning model with the transparency of a linguistically informed rule-based model, and show that the rule-based model performs consistently across different data conditions and offers greater transparency, whereas the deep learning model is dependent on the training set and struggles with unseen data. 
             </div>
             <div class="news-links">
-                <a href="https://aclanthology.org/2024.sicon-1.7/" class="news-link" target="_blank">📄 arXiv</a>
+                <a href="https://aclanthology.org/2024.sicon-1.7/" class="news-link" target="_blank">📄 Paper</a>
                 <!-- <a href="https://github.com/your-username/your-repo" class="news-link" target="_blank">💻 Code</a> -->
             </div>
         </div>
