updated nlpespective paper link

--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@ build a more explainable pipeline for the said task."
     <div class="newsfeed-content" id="newsfeed">
         <!-- Replace with your actual publications -->
         <div class="news-item">
-            <div class="news-date">July 26, 2025</div>
+            <div class="news-date">Nov 08, 2025</div>
             <span class="news-badge badge-accepted">Accepted</span>
             <div class="news-title">
-                <a href="https://arxiv.org/abs/2507.15114" target="_blank">From Disagreement to Understanding: The Case for Ambiguity Detection in NLI</a>
+                <a href="https://aclanthology.org/2025.nlperspectives-1.4/" target="_blank">From Disagreement to Understanding: The Case for Ambiguity Detection in NLI</a>
             </div>
             <div class="news-venue">Accepted to NLPerspectives EMNLP 2025</div>
             <div class="news-description">
                 This position paper argues that annotation disagreement in Natural Language Inference (NLI) is not mere noise but often reflects meaningful interpretive variation, especially when triggered by ambiguity in the premise or hypothesis. While underspecified guidelines and annotator behavior can contribute to variation, content-based ambiguity offers a process-independent signal of divergent human perspectives. We call for a shift toward ambiguity-aware NLI by systematically identifying ambiguous input pairs and classifying ambiguity types.             </div>
             <div class="news-links">
-                <a href="https://arxiv.org/abs/2507.15114" class="news-link" target="_blank">📄 Arxiv</a>
+                <a href="https://aclanthology.org/2025.nlperspectives-1.4/" class="news-link" target="_blank">📄 Paper</a>
                 <!-- <a href="https://github.com/your-username/your-repo" class="news-link" target="_blank">💻 Code</a> -->
                 <!-- <a href="#" class="news-link" target="_blank">📊 Data</a> -->
             </div>
