Added new preprint

--- a/index.html
+++ b/index.html
@@ -69,6 +69,21 @@ build a more explainable pipeline for the said task."
 
     <div class="newsfeed-content" id="newsfeed">
         <!-- Replace with your actual publications -->
+         <div class="news-item">
+            <div class="news-date">Jan 05, 2026</div>
+            <span class="news-badge badge-preprint">Preprint</span>
+            <div class="news-title">
+                <a href="https://arxiv.org/abs/2507.15100" target="_blank">Filling the Gap: Is Commonsense Knowledge Generation useful for Natural Language Inference?</a>
+            </div>
+            <div class="news-venue">Preprint</div>
+            <div class="news-description">
+                This study examines whether Large Language Models (LLMs) can generate useful commonsense axioms for Natural Language Inference and shows that a hybrid approach, which selectively provides highly factual axioms based on judged helpfulness, yields consistent accuracy improvements across all tested configurations, demonstrating the effectiveness of selective knowledge access for NLI.
+            <div class="news-links">
+                <a href="https://arxiv.org/abs/2507.15100" class="news-link" target="_blank">📄 Arxiv</a>
+                <!-- <a href="https://github.com/your-username/your-repo" class="news-link" target="_blank">💻 Code</a> -->
+                <!-- <a href="#" class="news-link" target="_blank">📊 Data</a> -->
+            </div>
+        </div>
         <div class="news-item">
             <div class="news-date">Nov 08, 2025</div>
             <span class="news-badge badge-accepted">Accepted</span>
@@ -85,22 +100,6 @@ build a more explainable pipeline for the said task."
             </div>
         </div>
 
-        <div class="news-item">
-            <div class="news-date">July 26, 2025</div>
-            <span class="news-badge badge-preprint">Preprint</span>
-            <div class="news-title">
-                <a href="https://arxiv.org/abs/2507.15100" target="_blank">Filling the Gap: Is Commonsense Knowledge Generation useful for Natural Language Inference?</a>
-            </div>
-            <div class="news-venue">Preprint</div>
-            <div class="news-description">
-                This study explores the potential of Large Language Models (LLMs) as commonsense knowledge generators for NLI along two key dimensions: their reliability in generating such knowledge and the impact of that knowledge on prediction accuracy. We adapt and modify existing metrics to assess LLM factuality and consistency in generating in this context.                
-            </div>
-            <div class="news-links">
-                <a href="https://arxiv.org/abs/2507.15100" class="news-link" target="_blank">📄 Arxiv</a>
-                <!-- <a href="https://github.com/your-username/your-repo" class="news-link" target="_blank">💻 Code</a> -->
-                <!-- <a href="#" class="news-link" target="_blank">📊 Data</a> -->
-            </div>
-        </div>
 
         <div class="news-item">
             <div class="news-date">November 02, 2024</div>
