--- a/index.html
+++ b/index.html
@@ -77,13 +77,14 @@ build a more explainable pipeline for the said task."
             </div>
             <div class="news-venue">Preprint</div>
             <div class="news-description">
-                This study examines whether Large Language Models (LLMs) can generate useful commonsense axioms for Natural Language Inference and shows that a hybrid approach, which selectively provides highly factual axioms based on judged helpfulness, yields consistent accuracy improvements across all tested configurations, demonstrating the effectiveness of selective knowledge access for NLI.
+                This study examines whether Large Language Models (LLMs) can generate useful commonsense axioms for Natural Language Inference and shows that a hybrid approach, which selectively provides highly factual axioms based on judged helpfulness, yields consistent accuracy improvements across all tested configurations, demonstrating the effectiveness of selective knowledge access for NLI. </div>
             <div class="news-links">
                 <a href="https://arxiv.org/abs/2507.15100" class="news-link" target="_blank">📄 Arxiv</a>
                 <!-- <a href="https://github.com/your-username/your-repo" class="news-link" target="_blank">💻 Code</a> -->
                 <!-- <a href="#" class="news-link" target="_blank">📊 Data</a> -->
             </div>
         </div>
+
         <div class="news-item">
             <div class="news-date">Nov 08, 2025</div>
             <span class="news-badge badge-accepted">Accepted</span>
